# RigidBodySimulationBasics

./: .gitignore  README.md
SampleApp01/SampleApp01.xcodeproj/: project.pbxproj
SampleApp01/SampleApp01.xcodeproj/xcshareddata/xcschemes/: SampleApp01.xcscheme
SampleApp01/SampleApp01/LinuxOpenGL/: CMakeLists.txt  OpenGLBasicShaders.hpp  OpenGLRenderer.hpp  SampleApp01.cpp  UserInput.hpp
SampleApp01/SampleApp01/Simulation/: ChainedDisc.hpp  Simulator.hpp
SampleApp01/SampleApp01/Simulation/Common/: ConstraintsSolver.hpp  MLCPSolverVanillaPGS.hpp  RigidBody.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VelocityConstraint.hpp
SampleApp01/SampleApp01/iOS/: BridgingHeader.h
SampleApp01/SampleApp01/iOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
SampleApp01/SampleApp01/iOS/Rendering/: MetalRenderer.cpp  MetalRenderer.hpp  render.metal
SampleApp01/SampleApp01/iOS/UI/: ARCoordinator.swift  ContentView.swift  MetalView.swift  PhotoImageRenderer.swift  SampleApp01App.swift  TouchMTKView.swift
SampleApp01/SampleApp01/iOS/Util/: AppleUtil.hpp
SampleApp01/SampleApp01/iOS/WorldManager/: WorldManagerCppEnd.cpp  WorldManagerCppEnd.hpp  WorldManagerReverseShim.h  WorldManagerReverseShim.mm  WorldManagerShim.h  WorldManagerShim.mm  WorldManagerSwiftEnd.swift
